# satellite_calibration_asset_registry

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt
.claude/skills/scar-implementation/: SKILL.md
.github/workflows/: ci.yml
admin_api/: Dockerfile  main.py
admin_api/routers/: assets.py
admin_api/services/: asset_admin_service.py
assets/: clases.puml
examples/: micro_body_to_payload_newsat50.json  micro_vicarious_cal_gains_newsat46.json
migrations/: env.py
migrations/versions/: a1b2c3d4e5f6_initial_schema.py
pipeline_api/: Dockerfile  main.py
pipeline_api/routers/: assets.py
pipeline_api/services/: asset_resolution_service.py
shared/: health.py
shared/config/: __init__.py
shared/domain/: __init__.py
shared/repositories/: __init__.py  _tables.py  admin_metadata.py  cache.py  object_storage.py  pipeline_metadata.py
shared/validation/: __init__.py  definitions.py  service.py  validators.py
tests/unit/: test_asset_admin_service.py  test_asset_resolution_service.py  test_cache_keys.py  test_domain.py  test_routers.py  test_validation.py
